Fix DB connection for Render deployment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=VisitorManagementSystem
 #spring.datasource.password=MySQL@123
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/vmsdb_c6sb}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://dpg-d2fgjr0gjchc73fkg260-a.render.com:5432/vmsdb_c6sb}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:vmsdb_c6sb_user}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:xoIO7NY97QWfmyRGBxwQfAX1FlO8dLqr}
 spring.datasource.driver-class-name=org.postgresql.Driver
