Updated student controller to fix addAttribute error

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,15 +5,15 @@ spring.application.name=VisitorManagementSystem
 #spring.datasource.password=MySQL@123
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER_CLASS_NAME}
-spring.jpa.database-platform=${SPRING_JPA_DATABASE_PLATFORM}
+spring.datasource.url=jdbc:postgresql://dpg-d2gtl1odl3ps73fn2jtg-a.oregon-postgres.render.com:5432/postgresql_database_tqzq
+spring.datasource.username=postgresql_database_tqzq_user
+spring.datasource.password=a1Z3FdIalhwSnTVQSRTZAK6L8ikYLV6j
 
-
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
 spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
 
-server.port=${PORT:9999}
+server.port=9999
